<resources>
    <string name="app_name">Auto Clicker</string>
    <string name="accessibility_service_description">Allows the Auto Clicker app to perform automatic clicks on the screen. This service can interact with all apps to simulate tap gestures.</string>
    <string name="start_clicking">Start Clicking</string>
    <string name="stop_clicking">Stop Clicking</string>
    <string name="set_position">Set Click Position</string>
    <string name="click_interval">Click Interval (ms)</string>
    <string name="repeat_count">Repeat Count (0 = infinite)</string>
    <string name="enable_accessibility">Enable Accessibility</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="position_set">Position: X=%d, Y=%d</string>
    <string name="click_here">Click Here</string>
</resources>